--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;800&display=swap');
 
+:root {
+  --overlay-color: #294a58;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -19,6 +23,11 @@
   background: #111;
   color: #fff;
   z-index: 2;
+  transition: 0.5s;
+}
+
+.showcase.active {
+  right: 300px;
 }
 
 .showcase header {
@@ -38,7 +47,7 @@
   cursor: pointer;
 }
 
-.toggle {
+.menu-btn {
   position: relative;
   width: 60px;
   height: 60px;
@@ -48,15 +57,17 @@
   background-position: center;
   cursor: pointer;
   filter: invert(1);
+  transition: 0.5s;
 }
 
-.toggle.active {
+.menu-btn.active {
   background-image: url("images/close.svg");
   background-repeat: no-repeat;
   background-size: 25px;
   background-position: center;
   cursor: pointer;
   filter: invert(1);
+  transition: 0.5s;
 }
 
 .showcase video {
@@ -75,7 +86,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #294a58;
+  background-color: var(--overlay-color);
   mix-blend-mode: overlay;
 }
 
@@ -153,7 +164,34 @@
   color: white;
 }
 
-@media(max-width: 991px) {
+.menu {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.menu ul {
+  position: relative;
+  list-style: none;
+}
+
+.menu ul li a {
+  text-decoration: none;
+  font-size: 24px;
+  color: #111;
+
+}
+
+.menu ul li a:hover {
+  color: var(--overlay-color);
+}
+
+@media(max-width: 798px) {
   .showcase, .showcase header {
     padding: 40px;
   }
