--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
   font-family: 'Poppins', sans-serif;
 }
 
+/* Showcase */
+
 .showcase {
   position: absolute;
   right: 0;
@@ -43,31 +45,8 @@
 }
 
 .logo {
-  text-transform: uppercase;
-  cursor: pointer;
-}
-
-.menu-btn {
-  position: relative;
-  width: 60px;
-  height: 60px;
-  background-image: url("images/open.svg");
-  background-repeat: no-repeat;
-  background-size: 30px;
-  background-position: center;
-  cursor: pointer;
-  filter: invert(1);
-  transition: 0.5s;
-}
-
-.menu-btn.active {
-  background-image: url("images/close.svg");
-  background-repeat: no-repeat;
-  background-size: 25px;
-  background-position: center;
-  cursor: pointer;
-  filter: invert(1);
-  transition: 0.5s;
+  height: 80px;
+  width: 80px;
 }
 
 .showcase video {
@@ -133,6 +112,63 @@
   letter-spacing: 6px;
 }
 
+
+/* Menu Toggle */
+
+.menu-btn {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  background-image: url("images/open.svg");
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: center;
+  cursor: pointer;
+  filter: invert(1);
+  transition: 0.5s;
+}
+
+.menu-btn.active {
+  background-image: url("images/close.svg");
+  background-repeat: no-repeat;
+  background-size: 25px;
+  background-position: center;
+  cursor: pointer;
+  filter: invert(1);
+  transition: 0.5s;
+}
+
+/* Menu */
+
+.menu {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.menu ul {
+  position: relative;
+  list-style: none;
+}
+
+.menu ul li a {
+  text-decoration: none;
+  font-size: 24px;
+  color: #111;
+
+}
+
+.menu ul li a:hover {
+  color: var(--overlay-color);
+}
+
+/* Socials */
+
 .socials {
   position: absolute;
   bottom: 20px;
@@ -164,32 +200,7 @@
   color: white;
 }
 
-.menu {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 300px;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.menu ul {
-  position: relative;
-  list-style: none;
-}
-
-.menu ul li a {
-  text-decoration: none;
-  font-size: 24px;
-  color: #111;
-
-}
-
-.menu ul li a:hover {
-  color: var(--overlay-color);
-}
+/* Resposive */
 
 @media(max-width: 798px) {
   .showcase, .showcase header {
