--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;800&display=swap');
 
 :root {
-  --overlay-color: #294a58;
+  --overlay-color: #95bdbb;
 }
 
 * {
@@ -9,6 +9,18 @@
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
+}
+
+/* Overlay */
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--overlay-color);
+  mix-blend-mode: overlay;
 }
 
 /* Showcase */
@@ -45,8 +57,8 @@
 }
 
 .logo {
-  height: 80px;
-  width: 80px;
+  height: 75px;
+  width: 75px;
 }
 
 .showcase video {
@@ -57,16 +69,6 @@
   height: 100%;
   object-fit: cover;
   opacity: 0.8;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--overlay-color);
-  mix-blend-mode: overlay;
 }
 
 .text {
@@ -83,7 +85,7 @@
 
 .text h3 {
   font-size: 4em;
-  font-weight: 700;
+  font-weight: 600;
   line-height: 1em;
   text-transform: uppercase;
   text-shadow: 0 0 6px rgb(0 0 0 / 20%);
@@ -179,6 +181,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .socials li {
   list-style: none;
 }
@@ -203,8 +206,7 @@
 }
 
 .about-me {
-  height: 600px;
-  background-color: #111;
+  
 }
 
 /* Resposive */
