--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
+  scroll-behavior: smooth;
+}
+
+body {
+  height: 300vh;
 }
 
 /* Overlay */
@@ -59,6 +64,7 @@
 .logo {
   height: 75px;
   width: 75px;
+  cursor: pointer;
 }
 
 .showcase video {
@@ -163,7 +169,7 @@
 .menu ul li a {
   text-decoration: none;
   font-size: 24px;
-  color: #111;
+  color: var(--overlay-color);
 
 }
 
@@ -201,12 +207,40 @@
   color: white;
 }
 
-.fas {
+.far {
   color: white;
 }
 
 .about-me {
-  
+  position: absolute;
+  top: 100vh;
+  background-color: gray;
+  width: 100%;
+  height: 50vh;
+}
+
+.projects {
+  position: absolute;
+  background-color: greenyellow;
+  top: 150vh;
+  width: 100%;
+  height: 50vh;
+}
+
+.technology {
+  position: absolute;
+  background-color: rgb(47, 196, 255);
+  top: 200vh;
+  width: 100%;
+  height: 50vh;
+}
+
+.footer {
+  position: absolute;
+  background-color: rgb(205, 166, 231);
+  top: 250vh;
+  width: 100%;
+  height: 50vh;
 }
 
 /* Resposive */
