--- a/css/style.css
+++ b/css/style.css
@@ -211,31 +211,67 @@ body {
   color: white;
 }
 
+/* About me Section */
 .about-me {
   position: absolute;
   top: 100vh;
-  background-color: gray;
   width: 100%;
-  height: 50vh;
+  height: 100vh;
+  color: #fff;
 }
+.about-me img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  object-fit: cover;
+  background-repeat: no-repeat;
+  -webkit-filter: grayscale(0);
+	filter: grayscale(0);
+  transition: .5s ease-in-out;
+}
+
+.about-me img:hover {
+  -webkit-filter: grayscale(100%);
+	filter: grayscale(100%);
+	-webkit-transition: .3s ease-in-out;
+	transition: .5s ease-in-out;
+}
+
+.about-me p {
+  position: relative;
+  z-index: 10;
+  font-size: 1.1em;
+  margin: 20px 0;
+  font-weight: 400;
+  max-width: 700px;
+  text-shadow: 0 0 6px rgb(0 0 0 / 20%);
+}
+
+
+/* Projects Section */
 
 .projects {
   position: absolute;
   background-color: greenyellow;
-  top: 150vh;
+  top: 200vh;
   width: 100%;
-  height: 50vh;
+  height: 100vh;
 }
+
+/* Technology Section */
 
 .technology {
   position: absolute;
   background-color: rgb(47, 196, 255);
-  top: 200vh;
+  top: 250vh;
   width: 100%;
   height: 50vh;
 }
 
-.footer {
+/* Contacts Section */
+
+.contacts {
   position: absolute;
   background-color: rgb(205, 166, 231);
   top: 250vh;
