--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
   mix-blend-mode: overlay;
 }
 
-/* Showcase */
+/********************** Showcase *********************/
 
 .showcase {
   position: absolute;
@@ -65,6 +65,12 @@ body {
   height: 75px;
   width: 75px;
   cursor: pointer;
+  transition: 0.5s;
+}
+
+.logo:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
 }
 
 .showcase video {
@@ -94,7 +100,14 @@ body {
   font-weight: 600;
   line-height: 1em;
   text-transform: uppercase;
-  text-shadow: 0 0 6px rgb(0 0 0 / 20%);
+  letter-spacing: 3px;
+  color: #ffffff;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+}
+
+.text span {
+  color: var(--overlay-color);
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
 }
 
 .text p {
@@ -103,6 +116,7 @@ body {
   font-weight: 400;
   max-width: 700px;
   text-shadow: 0 0 6px rgb(0 0 0 / 20%);
+  
 }
 
 .text a {
@@ -110,7 +124,7 @@ body {
   font-size: 1em;
   background: #fff;
   padding: 10px 30px;
-  color: #111;
+  color: var(--overlay-color);
   margin-top: 10px;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -123,7 +137,7 @@ body {
 }
 
 
-/* Menu Toggle */
+/********************** Menu Toggle *********************/
 
 .menu-btn {
   position: relative;
@@ -148,7 +162,7 @@ body {
   transition: 0.5s;
 }
 
-/* Menu */
+/********************** Menu *********************/
 
 .menu {
   position: absolute;
@@ -177,7 +191,84 @@ body {
   color: var(--overlay-color);
 }
 
-/* Socials */
+/********************** About Me *********************/
+.about-me {
+  position: absolute;
+  top: 100vh;
+  width: 100%;
+  height: 100vh;
+  color: #fff;
+}
+.about-me img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  object-fit: cover;
+  background-repeat: no-repeat;
+  -webkit-filter: grayscale(0);
+	filter: grayscale(0);
+  transition: .5s ease-in-out;
+}
+
+.about-me img:hover {
+  -webkit-filter: grayscale(100%);
+	filter: grayscale(100%);
+	-webkit-transition: .5s ease-in-out;
+	transition: .5s ease-in-out;
+}
+
+.text-about-me {
+  position: relative;
+  top: 200px;
+  right: 130px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.about-me p {
+  position: relative;
+  z-index: 10;
+  font-size: 1.1em;
+  font-weight: 400;
+  max-width: 700px;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+}
+
+
+/********************** Projects *********************/
+
+.projects {
+  position: absolute;
+  background-color: greenyellow;
+  top: 200vh;
+  width: 100%;
+  height: 100vh;
+}
+
+/********************** Technology *********************/
+
+.technology {
+  position: absolute;
+  background-color: rgb(47, 196, 255);
+  top: 250vh;
+  width: 100%;
+  height: 50vh;
+}
+
+/********************** Contacts *********************/
+
+.contacts {
+  position: absolute;
+  background-color: rgb(205, 166, 231);
+  top: 250vh;
+  width: 100%;
+  height: 50vh;
+}
+
+/********************** Socials *********************/
 
 .socials {
   position: absolute;
@@ -211,75 +302,7 @@ body {
   color: white;
 }
 
-/* About me Section */
-.about-me {
-  position: absolute;
-  top: 100vh;
-  width: 100%;
-  height: 100vh;
-  color: #fff;
-}
-.about-me img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  object-fit: cover;
-  background-repeat: no-repeat;
-  -webkit-filter: grayscale(0);
-	filter: grayscale(0);
-  transition: .5s ease-in-out;
-}
-
-.about-me img:hover {
-  -webkit-filter: grayscale(100%);
-	filter: grayscale(100%);
-	-webkit-transition: .3s ease-in-out;
-	transition: .5s ease-in-out;
-}
-
-.about-me p {
-  position: relative;
-  z-index: 10;
-  font-size: 1.1em;
-  margin: 20px 0;
-  font-weight: 400;
-  max-width: 700px;
-  text-shadow: 0 0 6px rgb(0 0 0 / 20%);
-}
-
-
-/* Projects Section */
-
-.projects {
-  position: absolute;
-  background-color: greenyellow;
-  top: 200vh;
-  width: 100%;
-  height: 100vh;
-}
-
-/* Technology Section */
-
-.technology {
-  position: absolute;
-  background-color: rgb(47, 196, 255);
-  top: 250vh;
-  width: 100%;
-  height: 50vh;
-}
-
-/* Contacts Section */
-
-.contacts {
-  position: absolute;
-  background-color: rgb(205, 166, 231);
-  top: 250vh;
-  width: 100%;
-  height: 50vh;
-}
-
-/* Resposive */
+/********************** Resposivness *********************/
 
 @media(max-width: 798px) {
   .showcase, .showcase header {
@@ -292,5 +315,10 @@ body {
 
   .text h3 {
     font-size: 2em;
+  }
+
+  .text-about-me {
+    left: 40px;
+    width: 200px;
   }
 }
