--- a/css/style.css
+++ b/css/style.css
@@ -229,8 +229,8 @@ body {
 
 .text-about-me {
   position: relative;
-  top: 200px;
-  right: 130px;
+  top: 180px;
+  right: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -245,9 +245,14 @@ body {
   max-width: 700px;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
 }
+.project-link {
+  opacity: 0;
+  transition: 0.5s;
+}
 
-.text-about-me a{
-  transition-delay: 10s;
+.project-link.active{
+  opacity: 1;
+  transition: 0.5s;
 }
 
 .text-about-me.active {
