--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,12 @@
 }
 
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
   scroll-behavior: smooth;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -304,36 +305,21 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .project-title h4 {
-  font-size: 3em;
+  font-size: 2em;
   font-weight: 400;
   line-height: 1em;
   text-transform: uppercase;
   letter-spacing: 3px;
   color: var(--overlay-color);
-  text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
-  margin-top: 10px;
+  text-shadow: 1px 1px 2px rgb(250 250 250);
 }
 
-*{
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-h1{
-  font-size: 2.5rem;
-  font-family: 'Montserrat';
-  font-weight: normal;
-  color: #444;
-  text-align: center;
-  margin: 2rem 0;
-}
-
-.wrapper{
+.card-wrapper{
   width: 90%;
   margin: 0 auto;
   max-width: 80rem;
@@ -406,6 +392,7 @@ h1{
             backface-visibility: hidden;
     border-radius: 10px;
 }
+
 .container:hover .front,
 .container:hover .back{
     -webkit-transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
@@ -487,7 +474,7 @@ h1{
 
 .front .inner span{
   color: rgba(255,255,255,0.7);
-  font-family: 'Montserrat';
+  font-family: 'Poppins', sans-serif;
   font-weight: 300;
 }
 
