--- a/css/project_tech.css
+++ b/css/project_tech.css
@@ -1,24 +1,37 @@
-*{
-    margin: 0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+/********************** Projects & Tech *********************/
+
+.projects {
+    position: absolute;
+    background-color: #FAFAFA;
+    top: 200vh;
+    width: 100%;
+    height: 100vh;
+  }
+  .project-title {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
   
-  h1{
-    font-size: 2.5rem;
-    font-family: 'Montserrat';
-    font-weight: normal;
-    color: #444;
-    text-align: center;
-    margin: 2rem 0;
+  .project-title h4 {
+    font-size: 2em;
+    font-weight: 400;
+    line-height: 1em;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    color: var(--overlay-color);
+    text-shadow: 1px 1px 2px rgb(250 250 250);
   }
   
-  .wrapper{
+  .card-wrapper{
     width: 90%;
     margin: 0 auto;
     max-width: 80rem;
   }
+  /*********** Projects Cards ***********/
   
   .cols{
     display: -webkit-box;
@@ -47,22 +60,22 @@
   .front,
   .back{
     background-size: cover;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.25);
+    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.25); */
     border-radius: 10px;
-      background-position: center;
-      -webkit-transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-      transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-      -o-transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-      transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-      transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1), -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-      -webkit-backface-visibility: hidden;
-              backface-visibility: hidden;
-      text-align: center;
-      min-height: 280px;
-      height: auto;
-      border-radius: 10px;
-      color: #fff;
-      font-size: 1.5rem;
+    background-position: center;
+    -webkit-transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+    transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+    -o-transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+    transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+    transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1), -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+    text-align: center;
+    min-height: 280px;
+    height: auto;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 1.2rem;
   }
   
   .back{
@@ -87,6 +100,7 @@
               backface-visibility: hidden;
       border-radius: 10px;
   }
+  
   .container:hover .front,
   .container:hover .back{
       -webkit-transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
@@ -148,7 +162,7 @@
   }
   
   .front .inner p{
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-bottom: 2rem;
     position: relative;
   }
@@ -168,7 +182,7 @@
   
   .front .inner span{
     color: rgba(255,255,255,0.7);
-    font-family: 'Montserrat';
+    font-family: 'Poppins', sans-serif;
     font-weight: 300;
   }
   
@@ -188,5 +202,46 @@
     .col{
       width: 100%;
       margin: 0 0 2rem 0;
+    }
+  }
+
+  /*********** Icons ***********/
+
+.program-icons-container ul {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    list-style: none;
+    margin-top: 100px;
+  }
+  
+  .program-icons-container svg {
+    height: 100px;
+    width: 100px;
+  }
+  
+  .program-icons-container svg:hover {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+  }
+  
+  @keyframes shake {
+    10%, 90% {
+      transform: translate3d(-1px, 0, 0);
+    }
+    
+    20%, 80% {
+      transform: translate3d(2px, 0, 0);
+    }
+  
+    30%, 50%, 70% {
+      transform: translate3d(-4px, 0, 0);
+    }
+  
+    40%, 60% {
+      transform: translate3d(4px, 0, 0);
     }
   }
