--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+/* CSS File Imports */
+
+@import url("showcase.css");
+@import url("menu.css");
+@import url("about_me.css");
+@import url("project_tech.css");
+@import url("socials.css");
+
+/* Fonts */
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;800&display=swap');
 
 :root {
@@ -16,581 +26,6 @@
 body {
   height: 325vh;
   background-color: #FAFAFA;
-}
-
-/* Overlay */
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--overlay-color);
-  mix-blend-mode: overlay;
-}
-
-/********************** Showcase *********************/
-
-.showcase {
-  position: absolute;
-  right: 0;
-  width: 100%;
-  min-height: 100vh;
-  padding: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #111;
-  color: #fff;
-  z-index: 2;
-  transition: 0.5s;
-}
-
-.showcase.active {
-  right: 300px;
-}
-
-.showcase header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 40px 100px;
-  z-index: 1000;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.logo {
-  height: 75px;
-  width: 75px;
-  cursor: pointer;
-  transition: 0.6s;
-}
-
-.logo:hover {
-  transform: scale(1.1);
-  transition: 0.6s;
-}
-
-.showcase video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0.8;
-}
-
-.text {
-  position: relative;
-  z-index: 10;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.text h2 {
-  font-size: 5em;
-  font-weight: 800;
-  line-height: 1em;
-  text-transform: uppercase;
-}
-
-.text h3 {
-  font-size: 4em;
-  font-weight: 600;
-  line-height: 1em;
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  color: #ffffff;
-  text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
-}
-
-.text span {
-  color: var(--overlay-color);
-  text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
-}
-
-.text p {
-  font-size: 1.1em;
-  margin: 20px 0;
-  font-weight: 400;
-  max-width: 700px;
-  text-shadow: 0 0 6px rgb(0 0 0 / 20%);
-  
-}
-
-.nav-btn {
-  display: inline-block;
-  font-size: 1em;
-  background: #fff;
-  padding: 10px 30px;
-  color: var(--overlay-color);
-  margin-top: 10px;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  transition: 0.2s;
-  text-decoration: none;
-  text-shadow: 0 0 1px rgb(149 189 187);
-}
-
-.text a:hover {
-  letter-spacing: 3px;
-}
-
-
-/********************** Menu Toggle *********************/
-
-.menu-btn {
-  position: relative;
-  width: 60px;
-  height: 60px;
-  background-image: url("images/open.svg");
-  background-repeat: no-repeat;
-  background-size: 30px;
-  background-position: center;
-  cursor: pointer;
-  filter: invert(1);
-  transition: 0.5s;
-}
-
-.menu-btn.active {
-  background-image: url("images/close.svg");
-  background-repeat: no-repeat;
-  background-size: 25px;
-  background-position: center;
-  cursor: pointer;
-  filter: invert(1);
-  transition: 0.5s;
-}
-
-/********************** Menu *********************/
-
-.menu {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 300px;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.menu ul {
-  position: relative;
-  list-style: none;
-}
-
-.menu ul li a {
-  text-decoration: none;
-  font-size: 24px;
-  color: var(--overlay-color);
-
-}
-
-.menu ul li a:hover {
-  color: var(--overlay-color);
-}
-
-/********************** About Me *********************/
-.about-me {
-  position: absolute;
-  top: 100vh;
-  width: 100%;
-  height: 100vh;
-  color: #fff;
-  /* -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%); */
-}
-.about-me img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  object-fit: cover;
-  background-repeat: no-repeat;
-  -webkit-filter: grayscale(0);
-	filter: grayscale(0);
-  transition: .5s ease-in-out;
-  
-}
-
-.about-me img:hover {
-  -webkit-filter: grayscale(100%);
-	filter: grayscale(70%);
-	-webkit-transition: .5s ease-in-out;
-	transition: .5s ease-in-out;
-}
-
-.text-about-me {
-  position: relative;
-  top: 180px;
-  right: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.text-about-me p {
-  position: relative;
-  z-index: 10;
-  font-size: 1.1em;
-  font-weight: 400;
-  max-width: 700px;
-  text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
-}
-
-.project-link {
-  transition: 0.5s;
-  position: relative;
-  bottom: 0;
-}
-
-.project-link:hover {
-  transform: rotate(360deg);
-  transform: scale(1.1);
-}
-
-.text-about-me.active {
-  animation: fadeIn linear 3s;
-  -webkit-animation: fadeIn linear 3s;
-  -moz-animation: fadeIn linear 3s;
-  -o-animation: fadeIn linear 3s;
-  -ms-animation: fadeIn linear 3s;
-}
-
-@keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
-
-@-moz-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
-
-@-webkit-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
-
-@-o-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
-
-@-ms-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
-
-
-/********************** Projects & Tech *********************/
-
-.projects {
-  position: absolute;
-  background-color: #FAFAFA;
-  top: 200vh;
-  width: 100%;
-  height: 100vh;
-}
-.project-title {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.project-title h4 {
-  font-size: 2em;
-  font-weight: 400;
-  line-height: 1em;
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  color: var(--overlay-color);
-  text-shadow: 1px 1px 2px rgb(250 250 250);
-}
-
-.card-wrapper{
-  width: 90%;
-  margin: 0 auto;
-  max-width: 80rem;
-}
-/*********** Projects Cards ***********/
-
-.cols{
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.col{
-  width: calc(25% - 2rem);
-  margin: 1rem;
-  cursor: pointer;
-}
-
-.container{
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-    -webkit-perspective: 1000px;
-            perspective: 1000px;
-}
-
-.front,
-.back{
-  background-size: cover;
-  /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.25); */
-  border-radius: 10px;
-  background-position: center;
-  -webkit-transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-  transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-  -o-transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-  transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-  transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1), -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  text-align: center;
-  min-height: 280px;
-  height: auto;
-  border-radius: 10px;
-  color: #fff;
-  font-size: 1.2rem;
-}
-
-.back{
-  background: #cedce7;
-  background: -webkit-linear-gradient(45deg,  #cedce7 0%,#596a72 100%);
-  background: -o-linear-gradient(45deg,  #cedce7 0%,#596a72 100%);
-  background: linear-gradient(45deg,  #cedce7 0%,#596a72 100%);
-}
-
-.front:after{
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-    content: '';
-    display: block;
-    opacity: .6;
-    background-color: #000;
-    -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
-    border-radius: 10px;
-}
-
-.container:hover .front,
-.container:hover .back{
-    -webkit-transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-    transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-    -o-transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-    transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-    transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1), -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-}
-
-.back{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-
-.inner{
-    -webkit-transform: translateY(-50%) translateZ(60px) scale(0.94);
-            transform: translateY(-50%) translateZ(60px) scale(0.94);
-    top: 50%;
-    position: absolute;
-    left: 0;
-    width: 100%;
-    padding: 2rem;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    outline: 1px solid transparent;
-    -webkit-perspective: inherit;
-            perspective: inherit;
-    z-index: 2;
-}
-
-.container .back{
-    -webkit-transform: rotateY(180deg);
-            transform: rotateY(180deg);
-    -webkit-transform-style: preserve-3d;
-            transform-style: preserve-3d;
-}
-
-.container .front{
-    -webkit-transform: rotateY(0deg);
-            transform: rotateY(0deg);
-    -webkit-transform-style: preserve-3d;
-            transform-style: preserve-3d;
-}
-
-.container:hover .back{
-  -webkit-transform: rotateY(0deg);
-          transform: rotateY(0deg);
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-}
-
-.container:hover .front{
-  -webkit-transform: rotateY(-180deg);
-          transform: rotateY(-180deg);
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-}
-
-.front .inner p{
-  font-size: 1.5rem;
-  margin-bottom: 2rem;
-  position: relative;
-}
-
-.front .inner p:after{
-  content: '';
-  width: 4rem;
-  height: 2px;
-  position: absolute;
-  background: #C6D4DF;
-  display: block;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  bottom: -.75rem;
-}
-
-.front .inner span{
-  color: rgba(255,255,255,0.7);
-  font-family: 'Poppins', sans-serif;
-  font-weight: 300;
-}
-
-@media screen and (max-width: 64rem){
-  .col{
-    width: calc(33.333333% - 2rem);
-  }
-}
-
-@media screen and (max-width: 48rem){
-  .col{
-    width: calc(50% - 2rem);
-  }
-}
-
-@media screen and (max-width: 32rem){
-  .col{
-    width: 100%;
-    margin: 0 0 2rem 0;
-  }
-}
-
-/*********** Icons ***********/
-
-.program-icons-container ul {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  list-style: none;
-  margin-top: 100px;
-}
-
-.program-icons-container svg {
-  height: 100px;
-  width: 100px;
-}
-
-.program-icons-container svg:hover {
-  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-  transform: translate3d(0, 0, 0);
-  backface-visibility: hidden;
-  perspective: 1000px;
-}
-
-@keyframes shake {
-  10%, 90% {
-    transform: translate3d(-1px, 0, 0);
-  }
-  
-  20%, 80% {
-    transform: translate3d(2px, 0, 0);
-  }
-
-  30%, 50%, 70% {
-    transform: translate3d(-4px, 0, 0);
-  }
-
-  40%, 60% {
-    transform: translate3d(4px, 0, 0);
-  }
-}
-
-/********************** Contacts *********************/
-
-.contacts {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--overlay-color);
-  top: 315vh;
-  width: 100%;
-  height: 10vh;
-}
-
-/********************** Socials *********************/
-
-.socials {
-  position: absolute;
-  z-index: 10;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.socials li {
-  list-style: none;
-}
-
-.socials li a {
-  display: inline-block;
-  margin-right: 20px;
-  transform: scale(0.5);
-  transition: 0.5s;
-}
-
-.socials li a:hover {
-  transform: scale(0.5) translateY(-15px);
-}
-
-/********************** Fontawesome Icons *********************/
-
-.fab {
-  color: white;
-}
-
-.far {
-  color: white;
-}
-
-.fas {
-  color: white;
 }
 
 /********************** Resposivness *********************/
