updated media queries

--- a/css/showcase.css
+++ b/css/showcase.css
@@ -21,10 +21,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #111;
+    background-color: #111;
     color: #fff;
     z-index: 2;
-    transition: 0.5s;
+    transition: 5s;
+    animation: fadeInAnimation ease 3s; 
+    animation-iteration-count: 1; 
+    animation-fill-mode: forwards;
+  }
+
+  @keyframes fadeInAnimation { 
+    0% { 
+        opacity: 0.5; 
+    } 
+    100% { 
+        opacity: 1;
+    } 
   }
   
   .showcase.active {
