--- a/css/style.css
+++ b/css/style.css
@@ -135,12 +135,12 @@ body {
 
 /******************** Preloader ********************/
 
-/* .preload * {
+.preload * {
   -webkit-transition: none !important;
   -moz-transition: none !important;
   -ms-transition: none !important;
   -o-transition: none !important;
-} */
+}
 
 .loader-wrapper {
   width: 100%;
