had to reset media queries

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ body {
   }
 
   .project-title h4 {
-    font-size: 1.5em;
+    font-size: 1em;
   }
 }
 
@@ -77,15 +77,18 @@ body {
     height: 55px;
     width: 55px;
   }
+
 }
 
 @media(max-width: 692px) {
+
   .text p {
     font-size: 1em;
   }
+
 }
 
-@media(max-width: 771px) {
+@media(-width: 771px) {
 
   body {
     height: 355vh;
@@ -131,54 +134,4 @@ body {
     left: 40px;
     width: 200px;
   }
-}
-
-/******************** Preloader ********************/
-
-.preload * {
-  -webkit-transition: none !important;
-  -moz-transition: none !important;
-  -ms-transition: none !important;
-  -o-transition: none !important;
-}
-
-.loader-wrapper {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #050505;
-  display:flex;
-  justify-content: center;
-  align-items: center;
-}
-.loader {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  position: relative;
-  border: 4px solid #Fff;
-  animation: loader 4s infinite ease;
-}
-.loader-inner {
-  vertical-align: top;
-  display: inline-block;
-  width: 100%;
-  background-color: #fff;
-  animation: loader-inner 2s infinite ease-in;
-}
-@keyframes loader {
-  0% { transform: rotate(0deg);}
-  25% { transform: rotate(180deg);}
-  50% { transform: rotate(180deg);}
-  75% { transform: rotate(360deg);}
-  100% { transform: rotate(360deg);}
-}
-@keyframes loader-inner {
-  0% { height: 0%;}
-  25% { height: 0%;}
-  50% { height: 100%;}
-  75% { height: 100%;}
-  100% { height: 0%;}
 }
