--- a/css/project_tech.css
+++ b/css/project_tech.css
@@ -205,6 +205,11 @@
     }
   }
 
+  .project-stack p i{
+    width: 200px;
+    height: 50px;
+  }
+
   /*********** Icons ***********/
 
 .program-icons-container ul {
